--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
+    xmlns:tools = "http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height = "match_parent"
+    android:paddingLeft= "@dimen/activity_horizontal_margin"
     android:paddingRight = "@dimen/activity_horizontal_margin"
     android:paddingTop = "@dimen/activity_vertical_margin"
-    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".MainActivity">
+    android:paddingBottom = "@dimen/activity_vertical_margin"
+    tools:context = ".MainScreen">
 
     <TextView
         android:text="Hi, "
@@ -76,6 +79,7 @@
         android:layout_height="wrap_content"
         android:text="Join existing game"
         android:id="@+id/join_existing_game"
+        android:onClick="joinExistingGame"
         android:layout_below="@+id/game_id"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"/>
@@ -85,6 +89,7 @@
         android:layout_height="wrap_content"
         android:text="Start a new game"
         android:id="@+id/start_new_game"
+        android:onClick="startNewGame"
         android:layout_below="@+id/join_existing_game"
         android:layout_centerHorizontal="true"/>
 
