--- a/app/src/main/res/layout/activity_gameplay.xml
+++ b/app/src/main/res/layout/activity_gameplay.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".GameplayActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/temp"
+        android:text="you are in GamePlay screen \nGame ID: "
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
