--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="colorHit">#ffff0000</color>
+    <color name="colorInvalid">#ffff0000</color>
     <color name="colorMissed">#ffffff00</color>
-    <color name="colorUnknown">#ff888888</color>
-    <color name="colorVacant">#ffffffff</color>
-    <color name="colorOccupied">#ff00ff00</color>
+    <color name="colorVacant">#ff888888</color>
+    <color name="colorUnknown">#ff00ff00</color>
+    <color name="colorOccupied">#000080</color>
 </resources>
