--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -108,6 +108,7 @@
         android:layout_below = "@+id/your_game_id"
         android:id="@+id/new_game_id"
         android:visibility="invisible"
+        android:textIsSelectable="true"
         android:textSize="15dp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"/>
